--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.3",
     "daisyui": "^5.0.16",
     "pinia": "^3.0.1",
