--- a/app/tsconfig.app.json
+++ b/app/tsconfig.app.json
@@ -2,11 +2,12 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
-  "compilerOptions": {
+    "compilerOptions": {
+      "incremental": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+      "baseUrl": ".",
+      "paths": {
+        "@/*": ["src/*"]
+      },
   }
 }
