--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.3",
     "daisyui": "^5.0.16",
+    "gsap": "^3.12.7",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
